src/z80asm/z80asm2/t/20-preproc/expected/cu_wait_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/cu_wait_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/cu_wait_01.asm...
# file: t/20-preproc/input/cu_wait_01.asm
Identifier	"DEFC"	1:11	keyword=DEFC 
Identifier	"X"	1:16	keyword=X 
EQ	"="	1:18	
Integer	"311"	1:20	int_value=311 
EndOfLine	"\n"	1:23	
Define constant: X = $137
Identifier	"DEFC"	2:11	keyword=DEFC 
Identifier	"Y"	2:16	
EQ	"="	2:18	
Integer	"55"	2:20	int_value=55 
EndOfLine	"\n"	2:22	
Define constant: Y = $37
t/20-preproc/input/cu_wait_01.asm:3:8: error: Expected expression after CU_WAIT
    cu.wait 
           ^
t/20-preproc/input/cu_wait_01.asm:4:10: error: Expected 2 arguments for CU_WAIT
    cu.wait 0
             ^
t/20-preproc/input/cu_wait_01.asm:5:11: error: Expected 2 arguments for CU_WAIT
    cu.wait 0,
              ^
t/20-preproc/input/cu_wait_01.asm:6:13: error: Unexpected comma after last argument in CU_WAIT
    cu.wait 0,0,
                ^
t/20-preproc/input/cu_wait_01.asm:7:1: error: CU_WAIT not supported on z80
    cu.wait -1, 0
    ^
t/20-preproc/input/cu_wait_01.asm:8:1: error: CU_WAIT not supported on z80
    cu.wait 0, 0
    ^
t/20-preproc/input/cu_wait_01.asm:9:1: error: CU_WAIT not supported on z80
    cu.wait X, 0
    ^
t/20-preproc/input/cu_wait_01.asm:10:1: error: CU_WAIT not supported on z80
    cu.wait X+1, 0
    ^
t/20-preproc/input/cu_wait_01.asm:11:1: error: CU_WAIT not supported on z80
    cu.wait 0, -1
    ^
t/20-preproc/input/cu_wait_01.asm:12:1: error: CU_WAIT not supported on z80
    cu.wait 0, 0
    ^
t/20-preproc/input/cu_wait_01.asm:13:1: error: CU_WAIT not supported on z80
    cu.wait 0, Y
    ^
t/20-preproc/input/cu_wait_01.asm:14:1: error: CU_WAIT not supported on z80
    cu.wait 0, Y+1
    ^
